Changes in 0.8.1 (released on November 1, 2009)
----------------------------------------------------------------

- Renamed the name of the module to Catcake
- Renamed the prefix from 'pg' to 'ck'
- Renamed getLastDesc to getLastDescendant
- Removed PyPogolyn
- Fixed ckID_ macro


Changes in 0.8.0 (released on August 15, 2009)
----------------------------------------------------------------

- Fixed PG_NO_THROW_EXCEPTION build option
- Renamed all the methods along the new coding-rule
- Added pgMotData, the motion data class
- Added pgMot, the motion-playing class
- Added pgUtil::loadPixelArtModel and pgUtil::loadPixelArtModelAs
- Added the sample #12
- Stopped support for iPhone OS 1.x
- Renamed the classes of all the samples
- Removed pgKeyMgr::KEY_CAPSLOCK and pgKeyMgr::KEY_NUMLOCK
- Changed the way to handle key-input for Linux
- Upgraded Doxygen to version 1.5.8


Changes in 0.7.0 (released on February 28, 2009)
----------------------------------------------------------------

- Added support for iPhone toolchain 2.0 (contributed by Takuro Noda)
- Upgraded FreeType to version 2.3.8
- Upgraded libpng to version 1.2.35
- Added support for playing sounds on Linux (contributed by Akihiro Komori)
- Added the sample #11
- Changed pgReadLittleEndian and pgWriteLittleEndian
- Changed the sample #10
- Changed pgSndMgr and the sample #6
- Fixed a memory leak in pgMemMgr
- Added pgID_ macro
- Changed pgID
- Fixed the way to process events for Win32
- Fixed pgDraw::~pgDraw
- Added pgTex::GetProxyTextureID and pgTex::SetProxyTextureID
- Added pgstyle, a c++ code beautifier for Pogolyn
- Added pgCol::operator/ and pgCol::operator/=
- Added pgUtil::CalcNormalAsTriangles
- Removed pgRend_Light::CalcNormalAsTriangleStrip
- Changed pgRend_Light::CalcNormalAsTriangles
- Added pgUtil::Import3DS and pgUtil::Import3DSAs
- Added pgMdl, the model-drawing class
- Added pgMdlData, the model data class
- Added pgScr::GetFirstDrawN and pgScr::GetLastDrawN
- Added pgDraw::GetType

