@@ -40,6 +40,7 @@ public:
     ckDefineException(ExceptionOutOfID);
 
     static const ckID ZERO; //!< The initial id.
+    static const u8 MAX_STRING_LENGTH = 32; //!< The maximum length of a string used for generating ckID.
 
     /*!
         Constructs and initializes a ckID to ckID::ZERO.
@@ -117,7 +118,7 @@ private:
     @param[in] str The seed of a unique value.
     @return A ckID.
 */
-#define ckID_(str) ckID::genIDForSystem(CK_ID_00(str, (sizeof("" str) < 33 ? sizeof(str) : 33)))
+#define ckID_(str) ckID::genIDForSystem(CK_ID_00(str, (sizeof("" str) < (ckID::MAX_STRING_LENGTH + 1) ? sizeof(str) : (ckID::MAX_STRING_LENGTH + 1))))
 
 
 #define CK_ID_00(str, len) ((len <= 1) ? 0 : (CK_ID_01(str, len - 1) | 0x80000000))
