@@ -42,6 +42,13 @@ void ckIDTest()
     }
 
     /*
+        static const u8 MAX_STRING_LENGTH
+    */
+    {
+        ckAssert(ckID::MAX_STRING_LENGTH == 32);
+    }
+
+    /*
         ckID()
         u32 operator%(u32 n) const
         u32 getValue() const
@@ -65,6 +72,10 @@ void ckIDTest()
 
         ckID id5 = id2;
         ckAssert(id5.getValue() == id2.getValue());
+
+        ckAssert(ckID::genID("0123456789012345678901234567890") != ckID::genID("01234567890123456789012345678901"));
+        ckAssert(ckID::genID("01234567890123456789012345678901") == ckID::genID("012345678901234567890123456789012"));
+        ckAssert(ckID::genID("01234567890123456789012345678901") == ckID::genID("0123456789012345678901234567890123"));
 
         ckAssertThrow(ckID::genID(NULL), ckID::ExceptionInvalidArgument);
     }
@@ -127,12 +138,6 @@ void ckIDTest()
 
         ckAssert(ckID_("0123456789012345678901234567890") == ckID::genID("0123456789012345678901234567890"));
         ckAssert(ckID_("01234567890123456789012345678901") == ckID::genID("01234567890123456789012345678901"));
-        ckAssert(ckID_("012345678901234567890123456789012") != ckID::genID("012345678901234567890123456789012"));
-        ckAssert(ckID_("0123456789012345678901234567890123") != ckID::genID("0123456789012345678901234567890123"));
-
-        ckAssert(ckID_("0123456789012345678901234567890") != ckID_("01234567890123456789012345678901"));
-        ckAssert(ckID_("01234567890123456789012345678901") == ckID_("01234567890123456789012345678901"));
-        ckAssert(ckID_("01234567890123456789012345678901") == ckID_("012345678901234567890123456789012"));
-        ckAssert(ckID_("01234567890123456789012345678901") == ckID_("0123456789012345678901234567890123"));
+        ckAssert(ckID_("012345678901234567890123456789012") == ckID::genID("012345678901234567890123456789012"));
     }
 }
